--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -15,7 +15,7 @@
 
 
      <div class="w-full px-8">
-         <p-stepper [value]="1" class="basis-[50rem]" [linear]="false">
+         <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
              <p-step-list>
                  <p-step [value]="1">Empresa</p-step>
                  <p-step [value]="2">Proprietário(a) / Titular da empresa</p-step>
@@ -1048,7 +1048,7 @@
                          <i class="bi bi-x-circle" style="font-size: 1.5rem"></i> &nbsp;
                      </ng-template>
                      <span class="ml-2 text-lg">
-                         Ocorreu um erro. Por favor, tente novamente ou contacte o administrador do sistema.
+                         {{ errorMessage }}
                      </span>
                  </p-message>
              </div>
