--- a/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
@@ -34,7 +34,7 @@
                     </span></div>
                 <p class="mb-6 mt-8">
                     Certifica-se que a Sociedade comercial <span class="font-semibold ">
-                        {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
+                        {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}} {{certificadoData.pedidoInscricaoCadastro.aplicante.empresa.sociedadeComercial.nome}}
                     </span>,
                     titular de Registo Comercial n.º <span class="font-semibold ">
                         {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
