--- a/src/app/pages/reports/aplicante/aplicante.component.html
+++ b/src/app/pages/reports/aplicante/aplicante.component.html
@@ -1,1 +1,109 @@
-<p>aplicante works!</p>
+<div class="card">
+    <form [formGroup]="reportForm" (ngSubmit)="onSubmit()" class="py-4">
+        <div class="grid grid-cols-4 gap-4">
+            <div class="mb-6 col-span-4 md:col-span-1">
+                <label for="empresaId" class="font-medium  mb-2 block">
+                    Empresa
+                </label>
+                <p-select fluid formControlName="empresaId" [options]="listaEmpresa" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a Empresa" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-4 md:col-span-1">
+                <label for="tipo" class="font-medium  mb-2 block">
+                    Tipo Aplicante
+                </label>
+                <p-select fluid formControlName="tipo" [options]="listaTipoAplicante" optionLabel="name"
+                    optionValue="value" placeholder="Selecione o tipo aplicante" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-4 md:col-span-1">
+                <label for="categoria" class="font-medium  mb-2 block">
+                    Categoria
+                </label>
+                <p-select fluid formControlName="categoria" [options]="listaCategoriaAplicante" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a categoria do aplicante" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-4 md:col-span-1">
+                <label for="estado" class="font-medium  mb-2 block">
+                    Estado
+                </label>
+                <p-select fluid formControlName="estado" [options]="listaEstadoAplicante" optionLabel="name"
+                    optionValue="value" placeholder="Selecione o estado" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-4 gap-4 mb-6">
+            <div class="col-span-1">
+                <label for="updatedAtRange" class="font-medium  mb-2 block">
+                    Período de Datas <span class="text-gray-300 italic">(Aprovado em)</span>
+                </label>
+                <p-date-picker formControlName="updatedAtRange" id="updatedAtRange" selectionMode="range"
+                    [showIcon]="true" [showButtonBar]="true" fluid dateFormat="dd/mm/yy" inputStyleClass="w-full" />
+            </div>
+        </div>
+        <div class="grid grid-cols-1">
+            <div class="col-span-1">
+                <p-button icon="pi pi-sync" (click)="onSubmit()" [loading]="dataIsFetching"
+                    [disabled]="isFormEmpty(reportForm)" pRipple label="Gerar Relatório" class="w-auto">
+                </p-button>
+                <p-button class="ml-4" (onClick)="clearFilter()" label="Clear" icon="pi pi-trash" [raised]="true"
+                    severity="secondary" />
+            </div>
+        </div>
+    </form>
+
+    @if (data.length > 0) {
+    <div class="flex justify-between">
+        <h1 class="text-2xl font-bold text-white pt-6">
+            Filtered Results
+        </h1>
+        <p-button (onClick)="exportToExcel()" [disabled]="isFormEmpty(reportForm) || data.length === 0"
+            label="Export to Excel" icon="pi pi-file-excel" [raised]="true" severity="success" class="mr-2" />
+    </div>
+    <p-table #dt [value]="data" responsiveLayout="scroll" [scrollable]="true" [rowHover]="true">
+        <ng-template #header>
+            <tr>
+                <th>Empresa</th>
+                <th>Aplicante ID</th>
+                <th>Tipo</th>
+                <th>Categoria</th>
+                <th>Estado</th>
+                <th>Aprovado em</th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-aplicante>
+            <tr>
+                <td>
+                    {{ aplicante.empresa.nome }}
+                </td>
+                <td>
+                    {{aplicante.numero}}
+                </td>
+                <td>
+                    {{aplicante.tipo}}
+                </td>
+                <td>
+                    {{aplicante.categoria}}
+                </td>
+                <td>
+                    <p-tag value="{{aplicante.estado.replace('_', ' ') | uppercase}}"
+                        [severity]="aplicante.estado | statusSeverity" icon="{{aplicante.estado | statusIcon}}" />
+                </td>
+                <td>
+                    {{ aplicante.updatedAt | date: 'dd/MM/yyyy, HH:mm:ss' }}
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+    <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+        [rowsPerPageOptions]="[50, 250, 500, 1000]" [showCurrentPageReport]="true"
+        currentPageReportTemplate="A mostrar {first} até {last} de {totalRecords}" />
+    }
+    @else {
+    @for (message of messages(); track message; let first = $first) {
+    <p-message [icon]="message.icon" [size]="message.size" [severity]="message.severity" [text]="message.content" />
+    }
+    }
+</div>
