--- a/src/app/pages/reports/licencas-certificados/licencas-certificados.component.html
+++ b/src/app/pages/reports/licencas-certificados/licencas-certificados.component.html
@@ -1,1 +1,353 @@
-<p>licencas-certificados works!</p>
+<div #card class="card min-h-[720px]">
+    <div class="grid grid-cols-3 gap-4 mb-6">
+        <div class="col-span-3 md:col-span-1">
+            <label for="sociedadeComercial" class="font-medium  mb-2 block">
+                Tipo de Certificado/Licença
+            </label>
+            <p-select fluid [formControl]="applicanteTypeFormControl" [options]="applicationTypesOpts"
+                optionLabel="name" optionValue="value" placeholder="Selecione o Tipo" [showClear]="true">
+            </p-select>
+        </div>
+    </div>
+    @switch (tipoAplicante) {
+    @case ('CADASTRO') {
+    <form [formGroup]="reportForm" class="py-2">
+        <div class="grid grid-cols-2 gap-6 mb-6">
+            <div class="col-span-1">
+                <label for="empresaId" class="font-medium  mb-2 block">
+                    Empresa
+                </label>
+                <p-select fluid formControlName="empresaId" [options]="listaEmpresa" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a empresa" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="categoria" class="font-medium  mb-2 block">
+                    Categoria
+                </label>
+                <p-select fluid formControlName="categoria" [options]="listaCategoria" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a categoria" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-6 mb-6">
+            <div class="col-span-1">
+                <label for="classeAtividadeId" class="font-medium mb-2 block">
+                    Atividade Principal exercida no Estabelecimento
+                </label>
+                <p-select formControlName="classeAtividadeId" inputId="classeAtividadeId"
+                    [options]="listaClasseAtividade" optionLabel="codigo" optionValue="id" fluid [filter]="true"
+                    filterBy="codigo,descricao" [showClear]="true" placeholder="Selecione a atividade principal">
+                    <ng-template let-tipo #item>
+                        <div class="flex items-center gap-2">
+                            <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
+                        </div>
+                    </ng-template>
+                    <ng-template let-tipo #selectedItem>
+                        <div class="flex items-center gap-2">
+                            <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
+                        </div>
+                    </ng-template>
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="tipoEstabelecimento" class="font-medium  mb-2 block">
+                    Tipo Estabelecimento
+                </label>
+                <p-select fluid formControlName="tipoEstabelecimento" [options]="listaTipoEstabelecimento"
+                    optionLabel="name" optionValue="value" placeholder="Selecione o tipo de estabelecimento"
+                    [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="caraterizacaoEstabelecimento" class="font-medium  mb-2 block">
+                    Caraterização Estabelecimento
+                </label>
+                <p-select fluid formControlName="caraterizacaoEstabelecimento"
+                    [options]="listaCaraterizacaoEstabelecimento" optionLabel="name" optionValue="value"
+                    placeholder="Selecione a caraterização do estabelecimento" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-6 mb-6">
+            <div class="col-span-1">
+                <label for="risco" class="font-medium  mb-2 block">
+                    Risco
+                </label>
+                <p-select fluid formControlName="risco" [options]="listaRisco" optionLabel="name"
+                    optionValue="value" placeholder="Selecione o risco" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="ato" class="font-medium  mb-2 block">
+                    Ato
+                </label>
+                <p-select fluid formControlName="ato" [options]="listaTipoAto" optionLabel="name" optionValue="value"
+                    placeholder="Selecione o ato" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 mb-6">
+            <div class="col-span-1">
+                <label for="dataValidadeRange" class="font-medium  mb-2 block">
+                    Período de Data Validade
+                </label>
+                <p-date-picker formControlName="dataValidadeRange" id="dataValidadeRange" selectionMode="range"
+                    [showIcon]="true" [showButtonBar]="true" fluid dateFormat="dd/mm/yy" inputStyleClass="w-full" />
+            </div>
+            <div class="col-span-1">
+                <label for="dataEmissaoRange" class="font-medium  mb-2 block">
+                    Período de Data Emissão
+                </label>
+                <p-date-picker formControlName="dataEmissaoRange" id="dataEmissaoRange" selectionMode="range"
+                    [showIcon]="true" [showButtonBar]="true" fluid dateFormat="dd/mm/yy" inputStyleClass="w-full" />
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-4">
+            <div class="mb-6 col-span-3 md:col-span-1">
+                <label for="municipioId" class="font-medium  mb-2 block">
+                    Municipio
+                </label>
+                <p-select fluid formControlName="municipioId" [options]="listaMunicipios" optionLabel="name"
+                    optionValue="value" placeholder="Selecione o municipio" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-3 md:col-span-1">
+                <label for="postoAdministrativoId" class="font-medium  mb-2 block">
+                    Posto Administrativo
+                </label>
+                <p-select fluid formControlName="postoAdministrativoId" [options]="listaPostosAdministrativos"
+                    optionLabel="name" optionValue="value" placeholder="Selecione o posto administrativo"
+                    [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-3 md:col-span-1">
+                <label for="sucoId" class="font-medium  mb-2 block">
+                    Suco
+                </label>
+                <p-select fluid formControlName="sucoId" [options]="listaSucos" optionLabel="name" optionValue="value"
+                    placeholder="Selecione o suco" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-1">
+            <div class="col-span-1">
+                <p-button icon="pi pi-sync" (click)="onSubmit('CADASTRO')" [loading]="dataIsFetching"
+                    [disabled]="isFormEmpty(reportForm)" pRipple label="Gerar Relatório" class="w-auto">
+                </p-button>
+                <p-button class="ml-4" (onClick)="clearFilter()" label="Clear" icon="pi pi-trash" [raised]="true"
+                    severity="secondary" />
+            </div>
+        </div>
+    </form>
+    }
+    @case('ATIVIDADE'){
+    <form [formGroup]="reportForm" class="py-2">
+        <div class="grid grid-cols-2 gap-6 mb-6">
+            <div class="col-span-1">
+                <label for="empresaId" class="font-medium  mb-2 block">
+                    Empresa
+                </label>
+                <p-select fluid formControlName="empresaId" [options]="listaEmpresa" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a empresa" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="categoria" class="font-medium  mb-2 block">
+                    Categoria
+                </label>
+                <p-select fluid formControlName="categoria" [options]="listaCategoria" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a categoria" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-6 mb-6">
+            <div class="col-span-1">
+                <label for="classeAtividadeId" class="font-medium mb-2 block">
+                    Atividade Principal exercida no Estabelecimento
+                </label>
+                <p-select formControlName="classeAtividadeId" inputId="classeAtividadeId"
+                    [options]="listaClasseAtividade" optionLabel="codigo" optionValue="id" fluid [filter]="true"
+                    filterBy="codigo,descricao" [showClear]="true" placeholder="Selecione a atividade principal">
+                    <ng-template let-tipo #item>
+                        <div class="flex items-center gap-2">
+                            <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
+                        </div>
+                    </ng-template>
+                    <ng-template let-tipo #selectedItem>
+                        <div class="flex items-center gap-2">
+                            <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
+                        </div>
+                    </ng-template>
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="tipoEstabelecimento" class="font-medium  mb-2 block">
+                    Caraterização de Estabelecimento
+                </label>
+                <p-select fluid formControlName="tipoEstabelecimento" [options]="listaCaraterizacaoEstabelecimento"
+                    optionLabel="name" optionValue="value" placeholder="Selecione a caraterização de estabelecimento"
+                    [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="tipoVistoria" class="font-medium  mb-2 block">
+                    Tipo Vistoria
+                </label>
+                <p-select fluid formControlName="tipoVistoria" [options]="listaTipoVistoria" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a tipo vistoria" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-6 mb-6">
+            <div class="col-span-1">
+                <label for="risco" class="font-medium  mb-2 block">
+                    Risco
+                </label>
+                <p-select fluid formControlName="risco" [options]="listaRisco" optionLabel="name" optionValue="value"
+                    placeholder="Selecione o risco" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="atividade" class="font-medium  mb-2 block">
+                    Atividade
+                </label>
+                <p-select fluid formControlName="atividade" [options]="listaTipoAto" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a atividade" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="col-span-1">
+                <label for="tipoAtividade" class="font-medium  mb-2 block">
+                    Tipo Atividade
+                </label>
+                <p-select fluid formControlName="tipoAtividade" [options]="listaQuantoAtividade" optionLabel="name"
+                    optionValue="value" placeholder="Selecione a tipo atividade" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 mb-6">
+            <div class="col-span-1">
+                <label for="dataValidadeRange" class="font-medium  mb-2 block">
+                    Período de Data Validade
+                </label>
+                <p-date-picker formControlName="dataValidadeRange" id="dataValidadeRange" selectionMode="range"
+                    [showIcon]="true" [showButtonBar]="true" fluid dateFormat="dd/mm/yy" inputStyleClass="w-full" />
+            </div>
+            <div class="col-span-1">
+                <label for="dataEmissaoRange" class="font-medium  mb-2 block">
+                    Período de Data Emissão
+                </label>
+                <p-date-picker formControlName="dataEmissaoRange" id="dataEmissaoRange" selectionMode="range"
+                    [showIcon]="true" [showButtonBar]="true" fluid dateFormat="dd/mm/yy" inputStyleClass="w-full" />
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-4">
+            <div class="mb-6 col-span-3 md:col-span-1">
+                <label for="municipioId" class="font-medium  mb-2 block">
+                    Municipio
+                </label>
+                <p-select fluid formControlName="municipioId" [options]="listaMunicipios" optionLabel="name"
+                    optionValue="value" placeholder="Selecione o municipio" [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-3 md:col-span-1">
+                <label for="postoAdministrativoId" class="font-medium  mb-2 block">
+                    Posto Administrativo
+                </label>
+                <p-select fluid formControlName="postoAdministrativoId" [options]="listaPostosAdministrativos"
+                    optionLabel="name" optionValue="value" placeholder="Selecione o posto administrativo"
+                    [showClear]="true">
+                </p-select>
+            </div>
+            <div class="mb-6 col-span-3 md:col-span-1">
+                <label for="sucoId" class="font-medium  mb-2 block">
+                    Suco
+                </label>
+                <p-select fluid formControlName="sucoId" [options]="listaSucos" optionLabel="name" optionValue="value"
+                    placeholder="Selecione o suco" [showClear]="true">
+                </p-select>
+            </div>
+        </div>
+        <div class="grid grid-cols-1">
+            <div class="col-span-1">
+                <p-button icon="pi pi-sync" (click)="onSubmit('ATIVIDADE')" [loading]="dataIsFetching"
+                    [disabled]="isFormEmpty(reportForm)" pRipple label="Gerar Relatório" class="w-auto">
+                </p-button>
+                <p-button class="ml-4" (onClick)="clearFilter()" label="Clear" icon="pi pi-trash" [raised]="true"
+                    severity="secondary" />
+            </div>
+        </div>
+    </form>
+    }
+    }
+
+    @if (data.length > 0) {
+    <div class="flex justify-between">
+        <h1 class="text-2xl font-bold text-white pt-6">
+            Filtered Results
+        </h1>
+        <p-button (onClick)="exportToExcel()" [disabled]="isFormEmpty(reportForm) || data.length === 0"
+            label="Export to Excel" icon="pi pi-file-excel" [raised]="true" severity="success" class="mr-2" />
+    </div>
+    <p-table #dt [value]="data" responsiveLayout="scroll" [scrollable]="true" [rowHover]="true">
+        <ng-template #header>
+            <tr>
+                <th>
+                    Empresa
+                </th>
+                <th>
+                    Nº Certificado
+                </th>
+                <th>
+                    Sede
+                </th>
+                <th>
+                    Data Validade
+                </th>
+                <th>
+                    Data Emissão
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-item>
+            <tr>
+                <td>
+                    {{ item.sociedadeComercial }}
+                </td>
+                @switch (tipoAplicante) {
+                @case('CADASTRO') {
+                <td>
+                    {{item.pedidoInscricaoCadastro.aplicante.numero}}
+                </td>
+                }
+                @case ('ATIVIDADE') {
+                <td>
+                    {{item.pedidoLicencaAtividade.aplicante.numero}}
+                </td>
+                }
+                }
+
+                <td>
+                    {{item.sede.local}} - {{item.sede.aldeia.suco.nome}},
+                    {{item.sede.aldeia.suco.postoAdministrativo.nome}},
+                    {{item.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                </td>
+                <td>
+                    {{item.dataValidade | date: 'dd/MM/yyyy' }}
+                </td>
+                <td>
+                    {{item.dataEmissao | date: 'dd/MM/yyyy' }}
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+    <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+        [rowsPerPageOptions]="[50, 250, 500, 1000]" [showCurrentPageReport]="true"
+        currentPageReportTemplate="A mostrar {first} até {last} de {totalRecords}" />
+    }
+    @else {
+    @for (message of messages(); track message; let first = $first) {
+    <p-message [icon]="message.icon" [size]="message.size" [severity]="message.severity" [text]="message.content" />
+    }
+    }
+</div>
