Remove legacy 'apps' feature and related files
Deleted all code, routes, and type definitions related to the 'apps' section (blog, chat, files, mail, kanban, tasklist) and their supporting services and models. Updated main routing to remove 'apps' routes and added notification resolver. Introduced new notification service and components for notifications and topbar. This refactor streamlines the codebase by removing unused or deprecated features and prepares for a new notification system.

--- a/src/app/pages/auth/verification/verification.component.html
+++ b/src/app/pages/auth/verification/verification.component.html
@@ -20,7 +20,10 @@
                   </span>
               </div>
               <div class="mb-6">
-                  <p-messages></p-messages>
+                  @if (erroMessage) {
+                  <p-message severity="error" [text]="erroMessage" icon="pi pi-times-circle" closable>
+                  </p-message>
+                  }
               </div>
               <div class="flex justify-between w-full items-center gap-4">
                   <p-inputOtp [formControl]="otpInput" [length]="6" [variant]="'filled'" [autofocus]="true"
