--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -48,7 +48,7 @@
         padding-right: 0;
         list-style: none;
         flex-grow: 1;
-        margin-right: -2rem;
+        // margin-right: -2rem;
 
         li {
             margin-left: 1.5rem;
