--- a/src/app/pages/auth/auth-layout/auth-layout.component.html
+++ b/src/app/pages/auth/auth-layout/auth-layout.component.html
@@ -8,17 +8,20 @@
         style="max-width: 490px; background-image: url('/images/pages/login1.webp'); background-repeat: no-repeat; background-size: cover">
     </div>
     }
-    <div class="w-full overflow-y-auto h-screen flex flex-col items-center justify-around" style="background: var(--surface-ground)">
+    <div class="w-full overflow-y-auto h-screen flex flex-col items-center justify-around"
+        style="background: var(--surface-ground)">
         <div>
             <router-outlet></router-outlet>
         </div>
-        <div class="flex items-end justify-end bottom-0 pb-8">
+        <div class="flex items-end justify-end bottom-0 pb-8 text-sm">
             <div class="flex items-center pr-6 mr-6 border-r border-surface-200">
-                <h4>
+                <a href="https://mci.gov.tl" target="_blank" class="flex items-center hover:text-emerald-500">
                     Ministério de Comércio e Indústria
-                </h4>
+                </a>
             </div>
-            <span class="text-sm">Copyright 2025</span>
+            <span>
+                &copy; {{ copyrightYears }}. Todos os direitos reservados.
+            </span>
         </div>
     </div>
 </div>
