--- a/src/app/pages/dados-mestre/lista/lista.component.html
+++ b/src/app/pages/dados-mestre/lista/lista.component.html
@@ -1,8 +1,5 @@
 <div class="card">
-    <p-table #dt [value]="dataList" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="50" [columns]="cols"
-        [rowHover]="true" [showCurrentPageReport]="true" responsiveLayout="scroll" dataKey="id"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]"
+    <p-table #dt [value]="dataList" [columns]="cols" [rowHover]="true" responsiveLayout="scroll"
         [globalFilterFields]="['codigo', 'descricao', 'tipo', 'tipoRisco', 'ato', 'montante']">
         <ng-template #caption>
             <div class="flex flex-wrap gap-2 items-center justify-between">
@@ -50,6 +47,9 @@
             </tr>
         </ng-template>
     </p-table>
+    <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+        [rowsPerPageOptions]="[50, 150, 250]" [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" />
 </div>
 
 <p-toast position="bottom-right" />
