Update dashboard images and localize app text
Replaced dashboard stat images with new SVGs and updated user avatar to use a webp image. Localized the register page and index.html title to Portuguese. Adjusted topbar avatar styling for improved appearance.

--- a/src/app/layout/components/topbar/app.topbar.html
+++ b/src/app/layout/components/topbar/app.topbar.html
@@ -34,12 +34,12 @@
          <li class="profile-item topbar-item">
              <div pStyleClass="@next" enterFromClass="!hidden" enterActiveClass="animate-scalein" leaveToClass="!hidden"
                  leaveActiveClass="animate-fadeout" [hideOnOutsideClick]="true"
-                 class="flex justify-around cursor-pointer hover:text-emerald-500">
+                 class="flex justify-around items-center cursor-pointer hover:text-emerald-500">
                  <span class="mr-4">
                      {{user.firstName}} {{user.lastName}}
                  </span>
                  <a>
-                     <img class="rounded-full" src="/images/avatar-m-1.jpg" />
+                     <img class="rounded-full" src="/images/user.webp"/>
                  </a>
              </div>
 
