--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1458,8 +1458,8 @@
                  <img src="/images/logo.png" style="width: 100px" alt="logo" />
              </div>
              <div class="mt-2 mb-8">
-                 <p class="text-xl">
-                     Trade License Management System
+                 <p class="text-2xl font-bold">
+                     Sistema de Gestão de <br> Licenças Comerciais e Indústriais
                  </p>
              </div>
              @if (notification) {
