Update register form field types and validation
Changed 'totalTrabalhadores' input type to 'number' in the register form for better data integrity. Disabled 'tipoPropriedade' field and ensured it remains required, improving form control and validation.

--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -113,7 +113,7 @@
                                      <label for="totalTrabalhadores" class="font-medium mb-2 block">
                                          Total Trabalhadores (Funcionários)
                                      </label>
-                                     <input formControlName="totalTrabalhadores" id="totalTrabalhadores" type="text"
+                                     <input formControlName="totalTrabalhadores" id="totalTrabalhadores" type="number"
                                          pInputText fluid />
                                      @if (empresaForm.get('totalTrabalhadores')?.touched &&
                                      empresaForm.get('totalTrabalhadores')?.invalid) {
