Add navigation progress bar to auth layout
Introduced a progress bar that displays during router navigation events in the auth layout component. This improves user feedback by showing an indeterminate progress bar while navigation is in progress.

--- a/src/app/pages/auth/auth-layout/auth-layout.component.html
+++ b/src/app/pages/auth/auth-layout/auth-layout.component.html
@@ -1,3 +1,6 @@
+@if (showProgressBar) {
+<p-progressbar mode="indeterminate" [style]="{ height: '6px' }" />
+}
 <div [class]="'flex h-screen' + (layoutService.isDarkTheme() ? 'layout-dark' : 'layout-light')">
     @if (layoutService.isDarkTheme()) {
     <div class="w-6/12 hidden md:block flex-shrink-0"
